# lictl

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  PROPOSAL.md  README.md  openapi.json
.github/: dependabot.yml
.github/workflows/: rust.yml
.openhands/: setup.sh
.openhands/microagents/: repo.md
crates/cli/: Cargo.toml
crates/cli/src/: constants.rs  context.rs  main.rs
crates/cli/src/cmd/: auth.rs  login.rs  logout.rs  mod.rs  whoami.rs
crates/cli/src/cmd/broadcasts/: export.rs  get.rs  mod.rs
crates/cli/src/cmd/req/: get.rs  mod.rs
crates/cli/src/cmd/studies/: mod.rs
crates/lictl/: Cargo.toml
crates/lictl/data/: 2025-freestyle-paris.json  2025-freestyle-paris.pgn
crates/lictl/src/: constants.rs  context.rs  main.rs
crates/lictl/src/cmd/: login.rs  mod.rs  whoami.rs
crates/lictl/src/cmd/auth/: mod.rs  oauth.rs  token.rs
crates/lictl/src/cmd/auth/tests/: mod.rs
crates/lictl/src/cmd/broadcast_rounds/: get.rs  mod.rs
crates/lictl/src/cmd/broadcasts/: export.rs  get.rs  mod.rs
crates/lictl/src/cmd/games/: export.rs  mod.rs
crates/lictl/src/cmd/games/tests/: export_test.rs
crates/lictl/src/cmd/req/: get.rs
crates/lictl/src/cmd/studies/: export.rs  import.rs  mod.rs
scripts/: copy-broadcast-to-study.sh
