[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["std", "serde"] }
clap = { version = "4.5.31", features = ["derive"] } 
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt"] }
