[package]
name = "lictl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true } 
serde = { workspace = true }
tokio = { workspace = true }
dialoguer = "0.11.0"
keyring = "3.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.2", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.2", features = ["windows-native"] }