[package]
name = "lictl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.31", features = ["derive"] } 
dialoguer = "0.11.0"
keyring = "3.6.2"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { workspace = true }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.2", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.2", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.2", features = ["windows-native"] }
