[package]
name = "lictl"
version = "0.2.1"
edition = "2024"
description = " A command line interface for scripting Lichess"
keywords = ["chess", "lichess", "pgn"]
categories = ["command-line-interface", "game-development"]
license = "AGPL-3.0-only"
homepage = "https://github.com/ddaws/lictl"
repository = "https://github.com/ddaws/lictl"
documentation = "https://docs.rs/lictl"
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
axum = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] } 
dialoguer = "0.11.0"
keyring = { version = "3.6.2" }
rand = "0.8.5"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { workspace = true }
serde_json = "1"
sha2 = "0.10.8"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
url = "2.5"
webbrowser = "1.0.5"

[dev-dependencies]
mockito = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
# Enable linux-native feature only on Linux
keyring = { version = "3.6.2", features = ["linux-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Enable apple-native feature only on macOS
keyring = { version = "3.6.2", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
# You can also add Windows-specific features if needed
keyring = { version = "3.6.2", features = ["windows-native"] }
